WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
236576
[LFC][IFC] Fix fast/block/float/float-with-fractional-height-vertical-lr.html
https://bugs.webkit.org/show_bug.cgi?id=236576
Summary
[LFC][IFC] Fix fast/block/float/float-with-fractional-height-vertical-lr.html
alan
Reported
2022-02-13 21:06:53 PST
ssia
Attachments
Patch
(2.76 KB, patch)
2022-02-13 21:09 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2022-02-13 21:09:04 PST
Created
attachment 451859
[details]
Patch
EWS
Comment 2
2022-02-14 06:39:01 PST
Committed
r289734
(
247219@main
): <
https://commits.webkit.org/247219@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 451859
[details]
.
Radar WebKit Bug Importer
Comment 3
2022-02-14 06:40:16 PST
<
rdar://problem/88901593
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug