[LFC][IFC] Fix fast/block/float/float-with-fractional-height-vertical-lr.html https://bugs.webkit.org/show_bug.cgi?id=236576

Reviewed by Antti Koivisto.

Let's translate the incoming float boxes' visual coordinates to logical for line layout.

* layout/integration/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::LineLayout::prepareFloatingState):



Canonical link: https://commits.webkit.org/247219@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289734 268f45cc-cd09-0410-ab3c-d52691b4dbfc